Deprecate Font-Awesome for the built-in Material Icons

--- a/bower.json
+++ b/bower.json
@@ -19,8 +19,7 @@
     "package.json"
   ],
   "dependencies": {
-    "angular": "^1.2.x",
-    "font-awesome": "^4.2.0"
+    "angular": "^1.2.x"
   },
   "license": "MIT",
   "homepage": "http://simeonc.github.io/sc-date-time"
