--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   ],
   "license": "MIT",
   "homepage": "http://simeonc.github.io/md-date-time",
-  "main": "./dist/sc-date-time.min.js",
+  "main": "./sc-date-time.js",
   "devDependencies": {
     "bower": "^1.3.12",
     "coffee-script": "^1.8.0",
