--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
   "homepage": "http://simeonc.github.io/md-date-time",
   "main": "./dist/sc-date-time.min.js",
   "devDependencies": {
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-preset-env": "^1.1.8",
+    "babel-register": "^6.23.0",
     "bower": "^1.3.12",
     "coffee-script": "^1.8.0",
     "conventional-changelog": "0.0.11",
