--- a/package.json
+++ b/package.json
@@ -19,14 +19,12 @@
     "babel-preset-env": "^1.1.8",
     "babel-register": "^6.23.0",
     "bower": "^1.3.12",
-    "coffee-script": "^1.8.0",
     "conventional-changelog": "0.0.11",
     "del": "^1.1.1",
     "gulp": "^3.8.10",
     "gulp-autoprefixer": "^2.0.0",
+    "gulp-babel": "^6.1.2",
     "gulp-bump": "^0.1.11",
-    "gulp-coffee": "^2.2.0",
-    "gulp-coffeelint": "^0.4.0",
     "gulp-concat-util": "^0.5.1",
     "gulp-filter": "^2.0.0",
     "gulp-git": "^0.5.5",
@@ -49,5 +47,6 @@
   "repository": {
     "type": "git",
     "url": "git://github.com/simeonc/sc-date-time.git"
-  }
+  },
+  "dependencies": {}
 }
