--- a/package.json
+++ b/package.json
@@ -35,14 +35,15 @@
     "gulp-rename": "^1.2.0",
     "gulp-stylus": "^1.3.4",
     "gulp-tag-version": "^1.2.1",
+    "in-publish": "^2.0.0",
     "jade": "^1.8.2",
     "nib": "^1.0.4",
     "run-sequence": "^1.0.2",
     "stylus": "^0.49.3"
   },
   "scripts": {
-    "test": "grunt travis-test --verbose",
-    "postinstall": "node ./node_modules/bower/bin/bower install --allow-root"
+    "prepublish": "in-publish && gulp",
+    "test": "gulp test"
   },
   "repository": {
     "type": "git",
