--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "bower": "^1.3.12",
     "conventional-changelog": "0.0.11",
     "del": "^1.1.1",
+    "eslint": "^3.15.0",
+    "eslint-config-airbnb-base": "^11.1.0",
+    "eslint-plugin-import": "^2.2.0",
     "gulp": "^3.8.10",
     "gulp-autoprefixer": "^2.0.0",
     "gulp-babel": "^6.1.2",
@@ -42,7 +45,8 @@
     "stylus": "^0.49.3"
   },
   "scripts": {
-    "prepublish": "in-publish && gulp",
+    "lint": "eslint .",
+    "prepublish": "in-publish && npm run lint && gulp",
     "test": "gulp test"
   },
   "repository": {
