--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,19 @@
 {
-    "extends": "airbnb-base"
+    "extends": "airbnb-base",
+    "rules": {
+        "arrow-parens": [2, "as-needed"],
+        "consistent-return": 0,
+        "curly": [2, "all"],
+        "func-names": 0,
+        "max-len": 0,
+        "no-nested-ternary": 0,
+        "no-param-reassign": 0,
+        "no-plusplus": 0,
+        "no-return-assign": 0,
+        "no-shadow": 0,
+        "no-undef": 0,
+        "no-underscore-dangle": 0,
+        "no-unused-vars": 0,
+        "radix": 0
+    }
 }
