--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
   "name": "md-date-time",
-  "filename": "sc-date-time.min.js",
   "version": "0.1.0",
   "description": "An implementation of the Material Design Date-Time picker",
   "maintainers": [
@@ -13,7 +12,7 @@
   ],
   "license": "MIT",
   "homepage": "http://simeonc.github.io/md-date-time",
-  "main": "./dist/sc-date-time.min.js",
+  "main": "./dist/sc-date-time.js",
   "peerDependencies": {
     "angular": "^1.2"
   },
